--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,8 @@
 /.vs/tuplify/v16
 /.vs/slnx.sqlite
 /src/api/.vs/Hopegenics.Tuplify
+/src/api/CustomerAPI/.vs/HG.Tuplify.Customer
+/src/api/CustomerAPI/HG.Tuplify.Customer.WebApi/bin/Debug/net5.0
+/src/api/CustomerAPI/HG.Tuplify.Customer.WebApi/obj
+/src/api/CustomerAPI/HG.Tuplify.Customer.WebApi.Tests/bin/Debug/net5.0
+/src/api/CustomerAPI/HG.Tuplify.Customer.WebApi.Tests/obj
