--- a/src/api/CustomerAPI/HG.Tuplify.Customer.WebApi/HG.Tuplify.Customer.WebApi.csproj
+++ b/src/api/CustomerAPI/HG.Tuplify.Customer.WebApi/HG.Tuplify.Customer.WebApi.csproj
@@ -9,4 +9,9 @@
   <ItemGroup>
     <PackageReference Include="Amazon.Lambda.AspNetCoreServer" Version="6.0.3" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\HG.Tuplify.Customer.Domain\HG.Tuplify.Customer.Domain.csproj" />
+    <ProjectReference Include="..\HG.Tuplify.Customer.Infrastructure\HG.Tuplify.Customer.Infrastructure.csproj" />
+    <ProjectReference Include="..\HG.Tuplify.Customer.Persistence\HG.Tuplify.Customer.Persistence.csproj" />
+  </ItemGroup>
 </Project>
