--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,7 @@
 /src/api/CustomerAPI/HG.Tuplify.Customer.Infrastructure/obj
 /src/api/CustomerAPI/HG.Tuplify.Customer.Persistence/bin/Debug/net5.0
 /src/api/CustomerAPI/HG.Tuplify.Customer.Persistence/obj
+/src/api/CustomerAPI/HG.Tuplify.Customer.Domain/bin/Release/net5.0
+/src/api/CustomerAPI/HG.Tuplify.Customer.Infrastructure/bin/Release/net5.0
+/src/api/CustomerAPI/HG.Tuplify.Customer.Persistence/bin/Release/net5.0
+/src/api/CustomerAPI/HG.Tuplify.Customer.WebApi/bin/Release
