--- a/src/api/CustomerAPI/HG.Tuplify.Customer.WebApi/HG.Tuplify.Customer.WebApi.csproj
+++ b/src/api/CustomerAPI/HG.Tuplify.Customer.WebApi/HG.Tuplify.Customer.WebApi.csproj
@@ -8,10 +8,14 @@
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Amazon.Lambda.AspNetCoreServer" Version="6.0.3" />
+    <PackageReference Include="Amazon.Lambda.Serialization.Json" Version="2.0.0" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\HG.Tuplify.Customer.Domain\HG.Tuplify.Customer.Domain.csproj" />
     <ProjectReference Include="..\HG.Tuplify.Customer.Infrastructure\HG.Tuplify.Customer.Infrastructure.csproj" />
     <ProjectReference Include="..\HG.Tuplify.Customer.Persistence\HG.Tuplify.Customer.Persistence.csproj" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Controllers\" />
   </ItemGroup>
 </Project>
