TUP-13-api-project-creation-and-configuration refactor: move secrets into a secret settings

--- a/.gitignore
+++ b/.gitignore
@@ -24,3 +24,6 @@
 /.vs/tuplify
 /src/api/CognitoTrigger/.vs/HG.Tuplify.CognitoTrigger
 /src/api/CognitoTrigger/HG.Tuplify.CognitoTrigger.Service/obj
+/src/api/CognitoTrigger/HG.Tuplify.CognitoTrigger.Service/appsettings.secrets.json
+/src/api/CognitoTrigger/HG.Tuplify.CognitoTrigger.Service/bin/Release
+/src/api/CognitoTrigger/HG.Tuplify.CognitoTrigger.Service/bin/Debug/net5.0
