--- a/src/api/CognitoTrigger/HG.Tuplify.CognitoTrigger.Service/appsettings.json
+++ b/src/api/CognitoTrigger/HG.Tuplify.CognitoTrigger.Service/appsettings.json
@@ -2,8 +2,6 @@
   "TuplifyDbSettings": {
     "Server": "tuplifydev1.cejcmkpbveth.eu-central-1.rds.amazonaws.com",
     "Port": 3306,
-    "Database": "tuplifydev1",
-    "User": "<USER>",
-    "Password": "<PASSWORD>"
+    "Database": "tuplifydev1"
   }
 }
