--- a/src/api/CognitoTrigger/HG.Tuplify.CognitoTrigger.Service/appsettings.json
+++ b/src/api/CognitoTrigger/HG.Tuplify.CognitoTrigger.Service/appsettings.json
@@ -1,7 +1,7 @@
 {
   "TuplifyDbSettings": {
-    "Server": "tuplifydev1.cejcmkpbveth.eu-central-1.rds.amazonaws.com",
+    "Server": "tuplifydev.cejcmkpbveth.eu-central-1.rds.amazonaws.com",
     "Port": 3306,
-    "Database": "tuplifydev1"
+    "Database": "tuplifydev"
   }
 }
