--- a/src/api/CognitoTrigger/HG.Tuplify.CognitoTrigger.Service/HG.Tuplify.CognitoTrigger.Service.csproj
+++ b/src/api/CognitoTrigger/HG.Tuplify.CognitoTrigger.Service/HG.Tuplify.CognitoTrigger.Service.csproj
@@ -5,7 +5,6 @@
     <AWSProjectType>Lambda</AWSProjectType>
     <!-- This property makes the build directory similar to a publish directory and helps the AWS .NET Lambda Mock Test Tool find project dependencies. -->
     <CopyLocalLockFileAssemblies>true</CopyLocalLockFileAssemblies>
-    <UserSecretsId>1c632e62-843c-478b-a43f-098fb2f015a2</UserSecretsId>
     <OutputType>Library</OutputType>
   </PropertyGroup>
   <ItemGroup>
@@ -27,7 +26,9 @@
     <PackageReference Include="Microsoft.Extensions.Configuration" Version="5.0.0" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="5.0.0" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="5.0.0" />
-    <PackageReference Include="Microsoft.Extensions.Configuration.UserSecrets" Version="5.0.0" />
     <PackageReference Include="MySql.EntityFrameworkCore" Version="5.0.8" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\HG.Tuplify.CognitoTrigger.Persistence\HG.Tuplify.CognitoTrigger.Persistence.csproj" />
   </ItemGroup>
 </Project>
