TUP-13-api-project-creation-and-configuration chore: Add merchant function project git setting files

--- a/.gitignore
+++ b/.gitignore
@@ -29,3 +29,6 @@
 /src/api/CognitoTrigger/HG.Tuplify.CognitoTrigger.Service/bin/Debug/net5.0
 /src/api/CognitoTrigger/HG.Tuplify.CognitoTrigger.Persistence/obj
 /src/api/CognitoTrigger/HG.Tuplify.CognitoTrigger.Persistence/bin/Debug/net5.0
+/src/api/CognitoTrigger/HG.Tuplify.CognitoTrigger.MerchantFunction/bin/Debug/net5.0
+/src/api/CognitoTrigger/HG.Tuplify.CognitoTrigger.MerchantFunction/obj
+/src/api/CognitoTrigger/HG.Tuplify.CognitoTrigger.MerchantFunction/appsettings.secrets.json
