--- a/.gitignore
+++ b/.gitignore
@@ -32,3 +32,5 @@
 /src/api/CognitoTrigger/HG.Tuplify.CognitoTrigger.MerchantFunction/bin/Debug/net5.0
 /src/api/CognitoTrigger/HG.Tuplify.CognitoTrigger.MerchantFunction/obj
 /src/api/CognitoTrigger/HG.Tuplify.CognitoTrigger.MerchantFunction/appsettings.secrets.json
+/src/api/WebAPI/obj
+/src/api/CognitoTrigger/.vs/HopeGenics.Tuplify
