Tup 13 api project creation and configuration (#3)
* TUP-13-api-project-creation-and-configuration refactor: move secrets into a secret settings

* TUP-13-api-project-creation-and-configuration chor: replace db server and db name

* refactor: push persistence folder to persistence project

* feat: add checking existing email

* TUP-13-api-project-creation-and-configuration chore: Add merchant function project git setting files

* TUP-13-api-project-creation-and-configuration refactor: reorder solution structure; chore: add webapi project

Co-authored-by: sabandurna <sabandurna@gmail.com>

--- a/.gitignore
+++ b/.gitignore
@@ -24,3 +24,13 @@
 /.vs/tuplify
 /src/api/CognitoTrigger/.vs/HG.Tuplify.CognitoTrigger
 /src/api/CognitoTrigger/HG.Tuplify.CognitoTrigger.Service/obj
+/src/api/CognitoTrigger/HG.Tuplify.CognitoTrigger.Service/appsettings.secrets.json
+/src/api/CognitoTrigger/HG.Tuplify.CognitoTrigger.Service/bin/Release
+/src/api/CognitoTrigger/HG.Tuplify.CognitoTrigger.Service/bin/Debug/net5.0
+/src/api/CognitoTrigger/HG.Tuplify.CognitoTrigger.Persistence/obj
+/src/api/CognitoTrigger/HG.Tuplify.CognitoTrigger.Persistence/bin/Debug/net5.0
+/src/api/CognitoTrigger/HG.Tuplify.CognitoTrigger.MerchantFunction/bin/Debug/net5.0
+/src/api/CognitoTrigger/HG.Tuplify.CognitoTrigger.MerchantFunction/obj
+/src/api/CognitoTrigger/HG.Tuplify.CognitoTrigger.MerchantFunction/appsettings.secrets.json
+/src/api/WebAPI/obj
+/src/api/CognitoTrigger/.vs/HopeGenics.Tuplify
